--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 @import url('https: //fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@400;700&display=swap');
-:root{
+
+:root {
     /* #primary colors */
     --primary-red: hsl(0, 100%, 67%);
     --yellow: hsl(39, 100%, 56%);
@@ -7,10 +8,10 @@
     --blue: hsl(234, 100%, 45%);
 
     /* gradients colors */
-    --Light-slate-blue-background: hsl(252, 100%, 76%); 
-    --Light-royal-blue-background: hsl(241, 81%, 54%); 
-    --Violet-blue-circle: hsl(241, 81%, 54%); 
-    --Persian-blue-circle: hsl(241, 72%, 46%, 0); 
+    --Light-slate-blue-background: hsl(252, 100%, 76%);
+    --Light-royal-blue-background: hsl(241, 81%, 54%);
+    --Violet-blue-circle: hsl(241, 81%, 54%);
+    --Persian-blue-circle: hsl(241, 72%, 46%, 0);
 
     /* Neutral */
     --Neutral-white: hsl(0, 0%, 100%);
@@ -26,45 +27,68 @@
 }
 
 
-body >* {
+body>* {
     font-family: 'Hanken', 'Grotesk', sans-serif;
     box-sizing: border-box;
     margin: 0;
 }
-main{
+.container{
+    background-color: var(--Neutral-Light-lavender);
+    border-radius: 10px;
+}
+
+.description{
+    font-size: 1.2rem;
+    background-image: linear-gradient(var(--Light-royal-blue-background), var(--Light-slate-blue-background));
+    border-radius: 20px;
+    width: 50%;
+    height: 50%;    
+}
+.number{
+    background-image: linear-gradient(var(--Violet-blue-circle),var(--Persian-blue-circle));
+    width: 20%;
+    border-radius: 50%;
+    height: 20%;
+    font-size: 1.5rem;
+}
+
+/* main {
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding: 3rem;
-    margin: 2rem;
     width: 100%;
     height: 100vh;
+    box-shadow: 20px 20px var(--Light-slate-blue-background);
 }
-header{
+
+header {
     height: 80%;
-    width: 60%;
+    width: 50%;
     background-image: linear-gradient(var(--Light-slate-blue-background), var(--Light-royal-blue-background));
     border-radius: 20px;
     padding: 31px 0px 0px 0px;
     margin: 1rem;
 }
-header>h1{
+
+header>h1 {
     font-size: 1.4rem;
     font-weight: var(--font-weight-normal);
-    color:var(--Neutral-Light-lavender  )
+    color: var(--Neutral-Light-lavender)
 }
-aside{
+
+aside {
     display: flex;
     flex-direction: column;
     height: 40%;
-    width: 60%;
+    width: 70%;
     background-image: linear-gradient(var(--Violet-blue-circle), var(--Persian-blue-circle));
     border-radius: 200px;
     margin: 20px auto;
     justify-content: center;
 }
-aside>p{
+
+aside>p {
     font-family: 'Grotesk';
     font-size: 3rem;
     font-weight: var(--font-weight-bold);
@@ -72,21 +96,24 @@ aside>p{
     margin-top: 0;
     margin-bottom: 0;
 }
-aside>span{
+
+aside>span {
     font-size: 1.3rem;
     color: var(--Neutral-Light-lavender);
 }
 
-.description{
+.description {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.great>h1{
+
+.great>h1 {
     color: var(--Neutral-white);
     font-size: 1.5rem;
 }
-.great>p{
+
+.great>p {
     width: 80%;
     align-items: center;
     padding: 20px auto;
@@ -95,14 +122,40 @@ aside>span{
     font-size: 16px;
     color: var(--Neutral-Light-lavender);
 }
-.summary{
+
+.summary {
+    height: 80%;
+    width: 50%;
+    background-image: linear-gradient(var(--Light-slate-blue-background), var(--Light-royal-blue-background));
+    border-radius: 20px;
+    padding: 31px 0px 0px 0px;
+    margin: 1rem;
     display: flex;
     flex-direction: column;
-    width: 40%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
 }
-.summary>h2{
+
+.summary>h2 {
     float: left;
-}
+} 
+ /* Medium screen and above
+ 
+ /* Add styles for medium screens and above */
+ @media (min-width: 768px) {
+     .header {
+         flex-direction: row;
+     }
+
+     .number {
+         display: inline-block;
+     }
+    } 
+
+ /* Large screen and above */
+ @media (min-width: 992px) {
+
+     /* Add styles for large screens and above */
+     .summary table {
+         width: 80%;
+         margin: 0 auto;
+     }
+ } 
