--- a/styles/style.css
+++ b/styles/style.css
@@ -35,21 +35,21 @@ body>* {
 .container{
     background-color: var(--Neutral-Light-lavender);
     border-radius: 10px;
+    width: auto;
+    height: auto;
 }
 
 .description{
     font-size: 1.2rem;
     background-image: linear-gradient(var(--Light-royal-blue-background), var(--Light-slate-blue-background));
     border-radius: 20px;
-    width: 50%;
-    height: 50%;    
+
 }
 .number{
     background-image: linear-gradient(var(--Violet-blue-circle),var(--Persian-blue-circle));
-    width: 20%;
+    width: 30%;
+    height: 70%;
     border-radius: 50%;
-    height: 20%;
-    font-size: 1.5rem;
 }
 
 /* main {
